<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.life_cycles.demo_mvvm_databinding.UserViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal"
                android:text="@string/form_write_user_info"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/input_background"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="6dp"
                android:text="@={viewModel.firstName}"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/input_background"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="6dp"
                android:text="@={viewModel.lastName}"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/input_background"
                android:hint="@string/user_name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="6dp"
                android:text="@={viewModel.userName}"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/input_background"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="6dp"
                android:text="@={viewModel.password}"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/input_background"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="6dp"
                android:text="@={viewModel.address}"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/input_background"
                android:hint="@string/phone"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="16dp"
                android:paddingEnd="6dp"
                android:text="@={viewModel.phone}"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_background"
                android:onClick="@{()->viewModel.onSubmit()}"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/data_write"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/output_background"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@{viewModel.firstNameOutput}"
                android:textColor="@color/white"
                android:textSize="14sp"
                tool:text="@string/first_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/output_background"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@{viewModel.lastNameOutput}"
                android:textColor="@color/white"
                android:textSize="14sp"
                tool:text="@string/last_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/output_background"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@{viewModel.userName}"
                android:textColor="@color/white"
                android:textSize="14sp"
                tool:text="@string/user_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/output_background"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@{viewModel.address}"
                android:textColor="@color/white"
                android:textSize="14sp"
                tool:text="@string/address" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/output_background"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@{viewModel.phone}"
                android:textColor="@color/white"
                android:textSize="14sp"
                tool:text="@string/phone" />
        </LinearLayout>
    </ScrollView>
</layout>